--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 id="verification_heading">Verify Your Account</h1>
+	<h6 id="verification_subtext"></h6>
+	<div class="code-container">
+		<input class="code" placeholder='0' type="code-1" >
+		<input class="code" placeholder='0' type="code-2" >
+		<input class="code" placeholder='0' type="code-3" >
+		<input class="code" placeholder='0' type="code-4" >
+		<input class="code" placeholder='0' type="code-5" >
+		<input class="code" placeholder='0' type="code-6" >
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
