--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1 id="verification_heading">Verify Your Account</h1>
-	<h6 id="verification_subtext"></h6>
+	<h6 id="verification_subtext">Create a frontend application for OTP (One Time Password) verification. The design should match the provided r</h6>
 	<div class="code-container">
 		<input class="code" placeholder='0' id="code-1" >
 		<input class="code" placeholder='0' id="code-2" >
